--- a/ConsoleApp1/Rogue.csproj
+++ b/ConsoleApp1/Rogue.csproj
@@ -42,9 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enemy.cs" />
+    <Compile Include="ActionControl.cs" />
+    <Compile Include="MapObject\EmptyFloor.cs" />
+    <Compile Include="MapObject\Enemy.cs" />
+    <Compile Include="IMapObject.cs" />
     <Compile Include="KeybordCommand.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="MapObject\ExitDoor.cs" />
+    <Compile Include="MapObject\Player.cs" />
+    <Compile Include="MapObject\RoomWall.cs" />
+    <Compile Include="MapObject\StartRoom.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DungeonRoom.cs" />
