--- a/ConsoleApp1/Rogue.csproj
+++ b/ConsoleApp1/Rogue.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionControl.cs" />
+    <Compile Include="EventLog.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="MapObject\Doors\BaseDoor.cs" />
     <Compile Include="MapObject\EmptyFloor.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DungeonRoom.cs" />
+    <Compile Include="ViewOnConsole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
