--- a/ConsoleApp1/Rogue.csproj
+++ b/ConsoleApp1/Rogue.csproj
@@ -44,7 +44,10 @@
   <ItemGroup>
     <Compile Include="Engine\ActionControl.cs" />
     <Compile Include="Engine\Graphics\UserInterface.cs" />
+    <Compile Include="Factory\LevelDifficults\NormalDifficult.cs" />
+    <Compile Include="Factory\LevelGenerator.cs" />
     <Compile Include="Framework\Variables.cs" />
+    <Compile Include="Interfaces\IDifficultsGenerator.cs" />
     <Compile Include="MapObject\Doors\BaseDoor.cs" />
     <Compile Include="MapObject\EmptyFloor.cs" />
     <Compile Include="MapObject\Enemy.cs" />
@@ -56,6 +59,8 @@
     <Compile Include="MapObject\Doors\StartRoom.cs" />
     <Compile Include="Framework\Point.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="MapObject\Traps\BaseTrap.cs" />
+    <Compile Include="MapObject\Traps\Trap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Factory\DungeonRoom.cs" />
     <Compile Include="Engine\Graphics\ViewOnConsole.cs" />
