--- a/ConsoleApp1/Rogue.csproj
+++ b/ConsoleApp1/Rogue.csproj
@@ -49,13 +49,15 @@
     <Compile Include="Factory\LevelDifficults\NormalDifficult.cs" />
     <Compile Include="Factory\LevelGenerator.cs" />
     <Compile Include="Framework\Variables.cs" />
+    <Compile Include="Interfaces\IDestroy.cs" />
     <Compile Include="Interfaces\IDifficultsGenerator.cs" />
     <Compile Include="MapObject\Doors\BaseDoor.cs" />
     <Compile Include="MapObject\EmptyFloor.cs" />
-    <Compile Include="MapObject\Enemy.cs" />
+    <Compile Include="MapObject\Enemys\Enemy.cs" />
     <Compile Include="Interfaces\IMapObject.cs" />
     <Compile Include="Engine\KeybordCommand.cs" />
     <Compile Include="MapObject\Doors\ExitDoor.cs" />
+    <Compile Include="MapObject\Enemys\TestEnemy.cs" />
     <Compile Include="MapObject\Player.cs" />
     <Compile Include="MapObject\RoomWall.cs" />
     <Compile Include="MapObject\Doors\StartRoom.cs" />
@@ -63,6 +65,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="MapObject\Traps\BaseTrap.cs" />
     <Compile Include="MapObject\Trap.cs" />
+    <Compile Include="MapObject\Weapons\BaseWeapon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Factory\DungeonRoom.cs" />
     <Compile Include="Engine\Graphics\ViewOnConsole.cs" />
