--- a/ConsoleApp1/Rogue.csproj
+++ b/ConsoleApp1/Rogue.csproj
@@ -53,18 +53,18 @@
     <Compile Include="Interfaces\IDifficultsGenerator.cs" />
     <Compile Include="MapObject\Doors\BaseDoor.cs" />
     <Compile Include="MapObject\EmptyFloor.cs" />
-    <Compile Include="MapObject\Enemys\Enemy.cs" />
+    <Compile Include="MapObject\Enemys\BaseEnemy.cs" />
     <Compile Include="Interfaces\IMapObject.cs" />
     <Compile Include="Engine\KeybordCommand.cs" />
     <Compile Include="MapObject\Doors\ExitDoor.cs" />
-    <Compile Include="MapObject\Enemys\TestEnemy.cs" />
+    <Compile Include="MapObject\Enemys\Dwarf.cs" />
     <Compile Include="MapObject\Player.cs" />
     <Compile Include="MapObject\RoomWall.cs" />
     <Compile Include="MapObject\Doors\StartRoom.cs" />
     <Compile Include="Framework\Point.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="MapObject\Traps\BaseTrap.cs" />
-    <Compile Include="MapObject\Trap.cs" />
+    <Compile Include="MapObject\Traps\Trap.cs" />
     <Compile Include="MapObject\Weapons\BaseWeapon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Factory\DungeonRoom.cs" />
