Добавили систему уровней (переименовать test.cs)

--- a/ConsoleApp1/Rogue.csproj
+++ b/ConsoleApp1/Rogue.csproj
@@ -96,6 +96,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="LevelSystems.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
