Теперь предметы из инвенторя можно использовать, добавил зелье здоровья, добавил описание предмета в инвентаре, найстройка вывода описания предмета в инвентаре

--- a/ConsoleApp1/Rogue.csproj
+++ b/ConsoleApp1/Rogue.csproj
@@ -87,6 +87,8 @@
     <Compile Include="MapObject\Doors\StartRoom.cs" />
     <Compile Include="Framework\Point.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="MapObject\Potions\BasePotion.cs" />
+    <Compile Include="MapObject\Potions\HealthPotions\HealPotion.cs" />
     <Compile Include="MapObject\Traps\BaseTrap.cs" />
     <Compile Include="MapObject\Traps\Trap.cs" />
     <Compile Include="MapObject\Weapons\MeleeWeapon\Axe.cs" />
